# HPC_proj

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  CatDogCNN.cpp  CatDogCNNV2.cpp  CatDogCNNV2.h  mainV1.cpp  mainV2.cpp  mainV4.cpp  main_kfold_cv.cpp  main_simple.cpp
